--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
 .venv/
 __pycache__/
+
+# Nuitka builds
+instalocka_gui.build/
+instalocka_gui.dist/
+instalocka_gui.onefile-build/
+instalocka_gui.exe
